[gd_scene load_steps=19 format=2]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://scenes/Weapons/Sword.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/combat system/hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/player/playersprite2.png" type="Texture" id=4]
[ext_resource path="res://assets/player/playersprite3.png" type="Texture" id=5]
[ext_resource path="res://assets/player/Shadonw.png" type="Texture" id=6]
[ext_resource path="res://assets/player/playeridle1.png" type="Texture" id=7]
[ext_resource path="res://assets/player/Progress.png" type="Texture" id=8]
[ext_resource path="res://assets/player/LifeBar.png" type="Texture" id=9]
[ext_resource path="res://assets/player/playersprite4.png" type="Texture" id=10]
[ext_resource path="res://assets/player/playersprite1.png" type="Texture" id=11]
[ext_resource path="res://assets/player/playeridle2.png" type="Texture" id=12]
[ext_resource path="res://scripts/LifeControl.gd" type="Script" id=13]
[ext_resource path="res://scenes/Weapons/bettleaxe.tscn" type="PackedScene" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 12 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "idle_dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 10 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 6.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 5, 7.5 )

[sub_resource type="CircleShape2D" id=10]
radius = 8.0

[node name="player" type="KinematicBody2D" groups=["player"]]
collision_layer = 2
collision_mask = 5
script = ExtResource( 1 )

[node name="Shadown" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
texture = ExtResource( 6 )
offset = Vector2( 0, 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.5 )
shape = SubResource( 2 )

[node name="Weapons" type="Node2D" parent="."]

[node name="Sword" parent="Weapons" instance=ExtResource( 2 )]

[node name="Weapons" parent="Weapons" instance=ExtResource( 14 )]
visible = false

[node name="hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" parent="hurtbox" index="0"]
modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 1, 0, 0, 1 )
shape = SubResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="LifeBar" type="Control" parent="."]
rect_scale = Vector2( 3, 3 )

[node name="Node2D" type="Node2D" parent="LifeBar"]
position = Vector2( 0.333333, 0 )
z_index = 2

[node name="LifeBarTex" type="TextureRect" parent="LifeBar/Node2D"]
margin_left = -105.667
margin_top = -59.0
margin_right = -57.6667
margin_bottom = -43.0
texture = ExtResource( 9 )

[node name="ProgressTex" type="TextureProgress" parent="LifeBar/Node2D/LifeBarTex"]
margin_right = 48.0
margin_bottom = 16.0
max_value = 5.0
value = 5.0
texture_progress = ExtResource( 8 )

[node name="itens" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="itens"]
shape = SubResource( 10 )

[node name="LifeControl" type="Node2D" parent="."]
script = ExtResource( 13 )

[node name="DropedItens" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropedItens"]
shape = SubResource( 10 )

[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="area_entered" from="itens" to="." method="_on_itens_area_entered"]

[editable path="Weapons/Sword"]
[editable path="Weapons/Sword/Node2D/Sprite/hitbox"]
[editable path="hurtbox"]
